<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="@dimen/drawable_padding"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_20"
        android:text="@string/camera"
        app:drawableStartCompat="@drawable/ic_camera"
        app:drawableTint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="@dimen/drawable_padding"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_20"
        android:text="@string/gallery"
        app:drawableStartCompat="@drawable/ic_gallery"
        app:drawableTint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/tv_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="@dimen/drawable_padding"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_20"
        android:text="@string/url"
        app:drawableStartCompat="@drawable/ic_url"
        app:drawableTint="?attr/colorPrimary" />
</LinearLayout>
