<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/padding_20"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/custom_toolbar"
    tools:context=".ui.activities.CreateNewActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/activity_title"
            android:maxWidth="@dimen/max_width"
            android:minWidth="@dimen/min_width"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_title"
            app:startIconTint="?attr/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_20"
            android:hint="@string/activity_description"
            android:maxWidth="@dimen/max_width"
            android:minWidth="@dimen/min_width"
            app:counterEnabled="true"
            app:counterMaxLength="500"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_title"
            app:startIconDrawable="@drawable/ic_description"
            app:startIconTint="?attr/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textMultiLine"
                android:lines="4" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/ll_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_10"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_description">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_5"
                android:gravity="center"
                android:text="@string/activity_type"
                android:textSize="@dimen/text_size_16" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/btn_toggle_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="@dimen/max_width"
                    android:minWidth="@dimen/min_width"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <Button
                        android:id="@+id/btn_travel"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="0dp"
                        android:layout_height="?attr/listPreferredItemHeight"
                        android:layout_weight="1"
                        android:text="@string/activity_type_travel" />

                    <Button
                        android:id="@+id/btn_work"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/listPreferredItemHeight"
                        android:text="@string/activity_type_work" />

                    <Button
                        android:id="@+id/btn_free_time"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="0dp"
                        android:layout_height="?attr/listPreferredItemHeight"
                        android:layout_weight="1"
                        android:text="@string/activity_type_free_time" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_18"
                android:text="@string/type_error"
                android:textColor="?attr/colorError"
                android:textSize="@dimen/text_size_12"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_add_images"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_images_btn"
                android:visibility="gone" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_20"
            android:hint="@string/activity_location"
            android:maxWidth="@dimen/max_width"
            android:minWidth="@dimen/min_width"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_category"
            app:startIconDrawable="@drawable/ic_location"
            app:startIconTint="?attr/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/ll_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_30"
            android:baselineAligned="false"
            android:maxWidth="@dimen/max_width"
            android:minWidth="@dimen/min_width"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_location">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_10"
                android:layout_weight="1"
                android:hint="@string/activity_date"
                app:startIconDrawable="@drawable/ic_calendar"
                app:startIconTint="?attr/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/activity_time"
                app:startIconDrawable="@drawable/ic_time"
                app:startIconTint="?attr/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <com.aemerse.slider.ImageCarousel
            android:id="@+id/carousel"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/margin_top_30"
            android:visibility="gone"
            app:autoWidthFixing="true"
            app:imageScaleType="fitCenter"
            app:infiniteCarousel="true"
            app:layout_constraintTop_toBottomOf="@+id/ll_date_time"
            app:nextButtonId="@id/btn_next"
            app:previousButtonId="@id/btn_previous"
            app:showCaption="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
