<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_bottom_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_16"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_title_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type"
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:contentDescription="@string/cd_chip_type"
                android:focusable="false"
                app:ensureMinTouchTargetSize="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_date"
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:contentDescription="@string/cd_chip_date"
                android:focusable="false"
                app:ensureMinTouchTargetSize="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_time"
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:contentDescription="@string/cd_chip_time"
                android:focusable="false"
                app:ensureMinTouchTargetSize="true" />

        </com.google.android.material.chip.ChipGroup>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
