<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/padding_20"
    tools:context=".ui.activities.ShowDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/material_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_10"
            app:chipSpacingHorizontal="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/material_divider"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_type"
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:contentDescription="@string/cd_chip_type"
                android:focusable="false"
                app:ensureMinTouchTargetSize="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_date"
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:contentDescription="@string/cd_chip_date"
                android:focusable="false"
                app:ensureMinTouchTargetSize="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_time"
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:contentDescription="@string/cd_chip_time"
                android:focusable="false"
                app:ensureMinTouchTargetSize="true" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/material_divider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_group" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_10"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/material_divider2" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/material_divider3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_location"
            style="@style/Widget.Material3.Chip.Assist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_10"
            android:contentDescription="@string/cd_chip_location"
            app:ensureMinTouchTargetSize="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/material_divider3" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_location" />

        <com.aemerse.slider.ImageCarousel
            android:id="@+id/carousel"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/margin_top_30"
            android:visibility="gone"
            app:autoWidthFixing="true"
            app:imageScaleType="fitCenter"
            app:infiniteCarousel="true"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider5"
            app:showCaption="false" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_delete_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:contentDescription="@string/cd_fab"
            android:text="@string/fab_delete_label"
            app:icon="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="?attr/colorSecondary"
            app:iconTint="?attr/colorSecondaryContainer"
            android:textColor="?attr/colorSecondaryContainer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
